2006-11-21  Akim Demaille  <demaille@gostai.com>

	* check.mk: Pass -Wno-override in check.mk.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Support SVN_EXTERNALS_PROXY
	* svn-externals.mk: here.
	* check.mk: Specify -Wno-portability.
	* init.mk: Initialize AUTOMAKE_OPTIONS.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Simplify more if/while
	* reindent (&strip_parens): New.
	Use it to simplify more if patterns.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	param-pc.mk.in
	* param-pc.mk.in: New.
	From liburbi-cpp/sdk
	* urbi-sdk.m4: Adjust: chose the right precursor of param.mk.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	use set -e
	* bootstrap: here.
	Adjust the code to avoid false failures.

2006-11-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add an M4 macro to easily disable debugging.
	* disable-debug.m4: New.

2006-11-20  Akim Demaille  <akim.demaille@free.fr>

	Factor svn:externals handling
	* svn-externals.mk: New.
	* build-aux.mk: Use it.

2006-11-18  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Check that the libkernel.la is present.
	* bootstrap: Make safer.
	* urbi-engine.ac: Check that the libkernel.la exists in $(kerneldir)
          since it's a frequent error to forget that the --prefix must point
          to where the kernel was installed.
	* urbi-sdk.m4: param.mk is now provided by an svn:external.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a workaround so that the BuildFarm can compile uengine-pc.
	* urbi-engine.ac: Here.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Make valgrind errors non-fatal by default.
	* test.sh.in: Here.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix valgrind/libtool issues.
	* test.sh.in: Here.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add valgrind support.
	* test.sh.in: Here. See the "built in" documentation.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
