@@ -168,10 +168,10 @@ if [ x"USE_VALGRIND" != x ] || [ x"WITH_VALGRIND" != x ]; then
       # Libtool often generates a script instead of an executable, let's see if
       # it's the case
       if (grep -i 'generated by ltmain' $prog) >/dev/null 2>/dev/null; then
-        valgrind_libtool='yes'
-        sed "/ 	*exec .*progdir.*program/ s/exec/& $VALGRIND $valgrind_args/" \
-          $prog >$prog.run_valgrind || { echo "$0: Internal error" >&2; exit 1; }
-        chmod a+x $prog.run_valgrind
+	valgrind_libtool='yes'
+	sed "/ 	*exec .*progdir.*program/ s/exec/& $VALGRIND $valgrind_args/" \
+	  $prog >$prog.run_valgrind || { echo "$0: Internal error" >&2; exit 1; }
+	chmod a+x $prog.run_valgrind
       fi
     fi
   fi
@@ -264,7 +264,7 @@ for i in stdout stderr; do
   if [ $check_var = 'yes' ]; then
     test x$remove_trailing_cr = xyes \
       && perl -e 'while(<>) { s/\r$//; print; }' \
-              $bprog.my_$i > $bprog.nocr.my_$i \
+	      $bprog.my_$i > $bprog.nocr.my_$i \
       && mv $bprog.nocr.my_$i $bprog.my_$i
     if cmp -s $bprog.my_$i $ref_var; then
       rm -f $bprog.my_$i # Good output, remove temporary file.
