@@ -8,7 +8,6 @@ AC_PREREQ([2.60])
 AC_DEFUN([URBI_PREFIX_CONFIG_H],
 [AX_PREFIX_CONFIG_H($@)
 AC_SUBST([PREFIXED_CONFIG_HEADER], ['$1'])
-AC_SUBST([PREFIXED_CONFIG_HEADER_basename], [$(basename '$1')])
 ])
 
 # URBI_CONFIG_HEADERS_PREFIXED(HEADER, PREFIXED-HEADER, PREFIX)
